--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang=fr>
+<html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css" media="all"/>
     <title>Commit 1</title>
   </head>
+  
   <body>
 
   </body>
