--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css" media="all"/>
-    <title>Commit 1</title>
+    <title>In formation</title>
   </head>
-  
+
   <body>
 
   </body>
